basket template fixed

--- a/homeoptik/templates/oscar/basket/basket.html
+++ b/homeoptik/templates/oscar/basket/basket.html
@@ -6,6 +6,8 @@
     {% trans "Basket" %} | {{ block.super }}
 {% endblock %}
 
+{% block breadcrumbs_style %}{% endblock %}
+
 {% block breadcrumbs %}
     <ol class="breadcrumb pull-left">
         <li>
