--- a/homeoptik/templates/oscar/basket/partials/basket_totals.html
+++ b/homeoptik/templates/oscar/basket/partials/basket_totals.html
@@ -2,11 +2,10 @@
 {% load currency_filters %}
 {% load shipping_tags %}
 
-<div id="basket_totals">
-    <table class="table table-condensed">
-        <tbody>
+<td class="totals">
+    <table class="cart-totals">
             <tr>
-                <th colspan="2"><h3>{% trans "Basket" %}</h3></th>
+                <td class="cart-total">{% trans "Basket" %}</td>
             </tr>
             {% with offer_discounts=basket.offer_discounts voucher_discounts=basket.grouped_voucher_discounts %}
                 {% block discount_totals %}
@@ -14,7 +13,7 @@
                         {# Basket total will be discounted so we show a before and after version #}
                         <tr>
                             <td>{% trans "Basket total (before discounts)" %}</td>
-                            <td class="align-right">
+                            <td class="price">
                                 {% if basket.is_tax_known and not show_tax_separately %}
                                     {{ basket.total_incl_tax_excl_discounts|currency:basket.currency }}
                                 {% else %}
@@ -30,13 +29,13 @@
                                         <br/><small>{{ discount.description }}</small>
                                     {% endif %}
                                 </td>
-                                <td class="align-right">-{{ discount.discount|currency:basket.currency }}</td>
+                                <td class="price">-{{ discount.discount|currency:basket.currency }}</td>
                             </tr>
                         {% endfor %}
 
                         {% if voucher_discounts %}
                             <tr>
-                                <th colspan="2"><h3>{% trans "Vouchers" %}</h3></th>
+                                <td class="cart-total">{% trans "Vouchers" %}</td>
                             </tr>
                             {% for discount in voucher_discounts %}
                                 <tr>
@@ -49,7 +48,7 @@
                                             </form>
                                         {% endif %}
                                     </td>
-                                    <td class="align-right">-{{ discount.discount|currency:basket.currency }}</td>
+                                    <td class="price">-{{ discount.discount|currency:basket.currency }}</td>
                                 </tr>
                             {% endfor %}
                         {% endif %}
@@ -59,26 +58,26 @@
                 {% block basket_total %}
                     {% if offer_discounts or voucher_discounts %}
                         <tr>
-                            <th class="total">{% trans "Basket total (after discounts)" %}</th>
-                            <th class="total align-right">
+                            <td>{% trans "Basket total (after discounts)" %}</td>
+                            <td class="price">
                                 {% if not show_tax_separately and basket.is_tax_known %}
                                     {{ basket.total_incl_tax|currency:basket.currency }}
                                 {% else %}
                                     {{ basket.total_excl_tax|currency:basket.currency }}
                                 {% endif %}
-                            </th>
+                            </td>
                         </tr>
                     {% else %}
                         {# No discounts to basket #}
                         <tr>
-                            <th class="total">{% trans "Basket total" %}</th>
-                            <th class="total align-right">
+                            <td>{% trans "Basket total" %}</td>
+                            <td class="price">
                                 {% if not show_tax_separately and basket.is_tax_known %}
                                     {{ basket.total_incl_tax|currency:basket.currency }}
                                 {% else %}
                                     {{ basket.total_excl_tax|currency:basket.currency }}
                                 {% endif %}
-                            </th>
+                            </td>
                         </tr>
                     {% endif %}
                 {% endblock %}
@@ -86,42 +85,32 @@
 
             {% block shipping_totals %}
                 <tr>
-                    <th>&nbsp;</th>
-                    <td></td>
-                </tr>
-
-                <tr>
-                    <th colspan="2">
-                        <h3>{% trans "Shipping" %}</h3>
-                        {% if shipping_methods|length > 1 and editable %}
-                            <small>{% trans "Alternative shipping methods can be chosen during checkout" %}</small>
-                        {% endif %}
-                    </th>
+                    <td class="cart-total">{% trans "Shipping" %}</td>
                 </tr>
                 {% if not shipping_method.is_discounted %}
                     <tr>
-                        <th class="total">
+                        <td>
                             {{ shipping_method.name }}
-                        </th>
-                        <th class="total align-right">
+                        </td>
+                        <td class="price">
                             {% if not show_tax_separately and shipping_charge.is_tax_known %}
                                 {{ shipping_charge.incl_tax|currency:basket.currency }}
                             {% else %}
                                 {{ shipping_charge.excl_tax|currency:basket.currency }}
                             {% endif %}
-                        </th>
+                        </td>
                     </tr>
                 {% else %}
                     {% shipping_charge_discount shipping_method basket as shipping_discount %}
                     {% shipping_charge_excl_discount shipping_method basket as shipping_charge_excl_discount %}
                     {# As shipping is discounted, we break it down into its original charge and a discount #}
                     <tr>
-                        <th class="total">{% trans "Shipping method" %}</th>
-                        <td class="total align-right">{{ shipping_method.name }}</td>
+                        <td>{% trans "Shipping method" %}</td>
+                        <td class="price">{{ shipping_method.name }}</td>
                     </tr>
                     <tr>
                         <td>{% trans "Shipping total (before discounts)" %}</td>
-                        <td class="align-right">
+                        <td class="price">
                             {% if not show_tax_separately and shipping_charge_excl_discount.is_tax_known %}
                                 {{ shipping_charge_excl_discount.incl_tax|currency:basket.currency }}
                             {% else %}
@@ -131,20 +120,20 @@
                     </tr>
                     {# This section needs adjustment to when taxes are shown separately #}
                     <tr>
-                        <td class="basket-discount"><span class="label label-success">{% trans "Discount" %}</span> {{ shipping_method.discount_name }}</td>
-                        <td class="align-right">-{{ shipping_discount|currency:basket.currency }}</td>
+                        <td><span class="label label-success">{% trans "Discount" %}</span> {{ shipping_method.discount_name }}</td>
+                        <td class="price">-{{ shipping_discount|currency:basket.currency }}</td>
                     </tr>
                     <tr>
-                        <th class="total">
+                        <td>
                             {% trans "Shipping total (after discounts)" %}
-                        </th>
-                        <th class="total align-right">
+                        </td>
+                        <td class="price">
                             {% if not show_tax_separately and shipping_charge.is_tax_known %}
                                 {{ shipping_charge.incl_tax|currency:basket.currency }}
                             {% else %}
                                 {{ shipping_charge.excl_tax|currency:basket.currency }}
                             {% endif %}
-                        </th>
+                        </td>
                     </tr>
                 {% endif %}
             {% endblock %}
@@ -152,25 +141,19 @@
             {% block tax_totals %}
                 {% if show_tax_separately %}
                     <tr>
-                        <th>&nbsp;</th>
-                        <td></td>
+                        <td class="cart-total">{% trans "Tax" %}</td>
                     </tr>
                     <tr>
-                        <th colspan="2">
-                            <h3>{% trans "Tax" %}</h3>
-                        </th>
-                    </tr>
-                    <tr>
-                        <th class="total">{% trans "Basket" %}</th>
-                        <th class="total align-right">
+                        <td>{% trans "Basket" %}</td>
+                        <td class="price">
                             {{ basket.total_tax|currency:basket.currency }}
-                        </th>
+                        </td>
                     </tr>
                     <tr>
-                        <th class="total">{% trans "Shipping" %}</th>
-                        <th class="total align-right">
+                        <td>{% trans "Shipping" %}</td>
+                        <td class="price">
                             {{ shipping_charge.tax|currency:basket.currency }}
-                        </th>
+                        </td>
                     </tr>
                 {% endif %}
             {% endblock %}
@@ -178,16 +161,11 @@
             {% block post_order_action_totals %}
                 {% if basket.post_order_actions %}
                     <tr>
-                        <th>&nbsp;</th>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <th><h3>{% trans "Post order actions" %}</h3><small>{% trans "These will be applied once your order is placed." %}</small></th>
-                        <td></td>
+                        <td class="cart-total">{% trans "Post order actions" %}<small>{% trans "These will be applied once your order is placed." %}</small></td>
                     </tr>
                     {% for discount in basket.post_order_actions %}
                         <tr>
-                            <td class="total" colspan="2">
+                            <td>
                                 <span class="label label-success">{{ discount.name }}</span><br/>
                                 <p>{{ discount.description }}</p>
                             </td>
@@ -198,19 +176,13 @@
 
             {% block order_total %}
                 <tr>
-                    <th>&nbsp;</th>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th class="total"><h3>{% trans "Order total" %}</h3></th>
-                    <td class="total align-right">
-                        <h3 class="price_color">
+                    <td class="cart-total">{% trans "Order total" %}</td>
+                    <td class="cart-total price">
                             {% if order_total.is_tax_known %}
                                 {{ order_total.incl_tax|currency:basket.currency }}
                             {% else %}
                                 {{ order_total.excl_tax|currency:basket.currency }}
                             {% endif %}
-                        </h3>
                     </td>
                 </tr>
                 {% if not order_total.is_tax_known %}
@@ -219,6 +191,62 @@
                     </tr>
                 {% endif %}
             {% endblock %}
-        </tbody>
     </table>
-</div>
+</td>
+
+{#<td class="totals">#}
+{#    <table class="cart-totals">#}
+{#        <tr>#}
+{#            <td>Sub Total</td>#}
+{#            <td class="price">&#36; 4500.00</td>#}
+{#        </tr>#}
+{##}
+{#        {% block shipping_totals %}#}
+{#            <tr>#}
+{#                {% if not shipping_method.is_discounted %}#}
+{#                    <td>{{ shipping_method.name }}</td>#}
+{#                    <td class="price">#}
+{#                        {% if not show_tax_separately and shipping_charge.is_tax_known %}#}
+{#                            {{ shipping_charge.incl_tax|currency:basket.currency }}#}
+{#                        {% else %}#}
+{#                            {{ shipping_charge.excl_tax|currency:basket.currency }}#}
+{#                        {% endif %}#}
+{#                    </td>#}
+{#                {% else %}#}
+{#                    {% shipping_charge_discount shipping_method basket as shipping_discount %}#}
+{#                    {% shipping_charge_excl_discount shipping_method basket as shipping_charge_excl_discount %}#}
+                    {# As shipping is discounted, we break it down into its original charge and a discount #}
+{##}
+{#                    <td><span class="label label-success">{% trans "Discount" %}</span> {{ shipping_method.discount_name }}</td>#}
+{#                    <td class="price">#}
+{##}
+                        {# before discount #}
+{#                        <s>#}
+{#                            {% if not show_tax_separately and shipping_charge_excl_discount.is_tax_known %}#}
+{#                                {{ shipping_charge_excl_discount.incl_tax|currency:basket.currency }}#}
+{#                            {% else %}#}
+{#                                {{ shipping_charge_excl_discount.excl_tax|currency:basket.currency }}#}
+{#                            {% endif %}#}
+{#                        </s>#}
+{##}
+                        {# after discount #}
+{#                        {% if not show_tax_separately and shipping_charge.is_tax_known %}#}
+{#                            {{ shipping_charge.incl_tax|currency:basket.currency }}#}
+{#                        {% else %}#}
+{#                            {{ shipping_charge.excl_tax|currency:basket.currency }}#}
+{#                        {% endif %}#}
+{#                    </td>#}
+{#                {% endif %}#}
+{#            </tr>#}
+{#        {% endblock %}#}
+{##}
+{#        <tr>#}
+{#            <td>VAT</td>#}
+{#            <td class="price">&#36; 250.00</td>#}
+{#        </tr>#}
+{#        <tr>#}
+{#            <td class="cart-total">total</td>#}
+{#            <td class="cart-total price">&#36; 5250.00</td>#}
+{#        </tr>#}
+{#    </table>#}
+{#</td>#}
