--- a/homeoptik/templates/oscar/base.html
+++ b/homeoptik/templates/oscar/base.html
@@ -53,6 +53,16 @@
 </head>
 
 <body id="{% block body_id %}default{% endblock %}" class="{% block body_class %}tile-1-bg preload ukb{% endblock %}">
+    <!-- Preloader
+    ============================================ -->
+    <div class="page-preloader">
+        <div class="vcenter">
+            <div class="vcenter-this"><img class="anim" src="{% static "images/loader.gif" %}" alt="загрузка..." />
+            </div>
+        </div>
+    </div>
+    <!-- /Preloader
+    ============================================ -->
 
     {# Main content goes in this 'layout' block #}
     {% block layout %}{% endblock %}
