--- a/homeoptik/templates/oscar/basket/partials/basket_totals.html
+++ b/homeoptik/templates/oscar/basket/partials/basket_totals.html
@@ -2,7 +2,7 @@
 {% load currency_filters %}
 {% load shipping_tags %}
 
-<td class="totals">
+<td class="totals" style="width:40%">
     <table class="cart-totals">
             <tr>
                 <td class="cart-total">{% trans "Basket" %}</td>
