--- a/homeoptik/templates/oscar/partials/nav_primary.html
+++ b/homeoptik/templates/oscar/partials/nav_primary.html
@@ -19,7 +19,7 @@
                 <span class="sr-only">Toggle navigation</span>
                 <i class="fa fa-navicon"></i>
             </button>
-            <a class="navbar-brand visible-xs" href="#"><img src="{% static "images/logo-white-xs.png" %}" alt="{{ shop_name }}"></a>
+            <a class="navbar-brand visible-xs" href="{{ homepage_url }}"><img src="{% static "images/logo-xs.png" %}" alt="{{ shop_name }}"></a>
         </div>
         <!-- /Header-->
 
