--- a/homeoptik/templates/oscar/partials/footer.html
+++ b/homeoptik/templates/oscar/partials/footer.html
@@ -47,7 +47,7 @@
                         <ul class="vlinks">
                             <li><a href="{% url 'customer:summary' %}">Личный кабинет</a></li>
                             <li><a href="{% url 'customer:order-list' %}">История заказов</a></li>
-                            <li><a href="{% url 'customer:wishlists-list' %}">Список желаний</a></li>
+{#                            <li><a href="{% url 'customer:wishlists-list' %}">Список желаний</a></li>#}
                             <li><a href="{% url 'basket:summary' %}">Посмотреть корзину</a></li>
 
                         </ul>
